@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.93.2.21 2002/06/03 19:30:51 mike Exp $"
+ * "$Id: printers.c,v 1.93.2.22 2002/06/27 15:10:42 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -39,12 +39,12 @@
  *                            changed.
  *   StopPrinter()          - Stop a printer from printing any jobs...
  *   ValidateDest()         - Validate a printer/class destination.
+ *   WritePrintcap()        - Write a pseudo-printcap file for older
+ *                            applications that need it...
  *   write_irix_config()    - Update the config files used by the IRIX
  *                            desktop tools.
  *   write_irix_state()     - Update the status files used by IRIX printing
  *                            desktop tools.
- *   write_printcap()       - Write a pseudo-printcap file for older
- *                            applications that need it...
  */
 
 /*
@@ -58,7 +58,6 @@
  * Local functions...
  */
 
-static void	write_printcap(void);
 #ifdef __sgi
 static void	write_irix_state(printer_t *p);
 #endif /* __sgi */
@@ -143,7 +142,7 @@ AddPrinter(const char *name)	/* I - Name of printer */
   * Write a new /etc/printcap or /var/spool/lp/pstatus file.
   */
 
-  write_printcap();
+  WritePrintcap();
 
   return (p);
 }
@@ -340,15 +339,7 @@ DeletePrinter(printer_t *p)	/* I - Printer to delete */
   {
     DefaultPrinter = Printers;
 
-#ifdef __sgi
-   /*
-    * Update the IRIX printer state for the new default printer; if
-    * no printers remain, then the default printer file will be
-    * removed...
-    */
-
-    write_irix_state(DefaultPrinter);
-#endif /* __sgi */
+    WritePrintcap();
   }
 
  /*
@@ -378,7 +369,7 @@ DeletePrinter(printer_t *p)	/* I - Printer to delete */
   * Write a new /etc/printcap file...
   */
 
-  write_printcap();
+  WritePrintcap();
 }
 
 
@@ -1726,16 +1717,26 @@ ValidateDest(const char   *hostname,	/* I - Host name */
 
 
 /*
- * 'write_printcap()' - Write a pseudo-printcap file for older applications
- *                      that need it...
+ * 'WritePrintcap()' - Write a pseudo-printcap file for older applications
+ *                     that need it...
  */
 
-static void
-write_printcap(void)
+void
+WritePrintcap(void)
 {
   FILE		*fp;		/* printcap file */
   printer_t	*p;		/* Current printer */
 
+
+#ifdef __sgi
+ /*
+  * Update the IRIX printer state for the default printer; if
+  * no printers remain, then the default printer file will be
+  * removed...
+  */
+
+  write_irix_state(DefaultPrinter);
+#endif /* __sgi */
 
  /*
   * See if we have a printcap file; if not, don't bother writing it.
@@ -1756,7 +1757,7 @@ write_printcap(void)
   * data has come from...
   */
 
-  fputs("# This file was automatically generated by cupsd(1m) from the\n", fp);
+  fputs("# This file was automatically generated by cupsd(8) from the\n", fp);
   fprintf(fp, "# %s/printers.conf file.  All changes to this file\n",
           ServerRoot);
   fputs("# will be lost.\n", fp);
@@ -2085,5 +2086,5 @@ write_irix_state(printer_t *p)	/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.93.2.21 2002/06/03 19:30:51 mike Exp $".
+ * End of "$Id: printers.c,v 1.93.2.22 2002/06/27 15:10:42 mike Exp $".
  */
